chagned all links that were eebhub.org to buildsci.us

--- a/views/accomplishments.html
+++ b/views/accomplishments.html
@@ -170,8 +170,8 @@
         </div>
       </h4>
       <h1>
-        <a href="http://tools.eebhub.org">
-    tools.eebhub.org
+        <a href="http://tools.buildsci.us">
+    tools.buildsci.us
   </a>
       </h1>
       <p>
@@ -303,7 +303,7 @@
             </div>
             <div class="span8">
               <p class="pull-left">
-                Direct to tools.eebhub.org
+                Direct to tools.buildsci.us
               </p>
             </div>
           </div>
@@ -704,7 +704,7 @@
             <br>
           </div>
         </div>
-        <span style="font-weight: normal;">The EEB Hub Simulation Platform could not have been built in 11 months without the use of open source software tools. &nbsp;While all software listed above supported the creation of tools.eebhub.org, only frameworks with an asteriks* were included in the code base. &nbsp;Honorable mentions of open source software also used include Cyberduck (server file transfer), Brackets.io (offline coding environment), &amp; ASHRAE Inverse Modeling Toolkit.</span>
+        <span style="font-weight: normal;">The EEB Hub Simulation Platform could not have been built in 11 months without the use of open source software tools. &nbsp;While all software listed above supported the creation of tools.buildsci.us, only frameworks with an asteriks* were included in the code base. &nbsp;Honorable mentions of open source software also used include Cyberduck (server file transfer), Brackets.io (offline coding environment), &amp; ASHRAE Inverse Modeling Toolkit.</span>
         &nbsp;
       </h5>
     </div>
@@ -789,7 +789,7 @@
       </h3>
       <h5>
         <span style="font-weight: normal;">
-    check out the <a href="http://tools.eebhub.org/news">8 news articles</a> published throughout 2013, especially the culminating research digest summary:</span>
+    check out the <a href="http://tools.buildsci.us/news">8 news articles</a> published throughout 2013, especially the culminating research digest summary:</span>
       </h5>
       <img src="https://s3.amazonaws.com/media.jetstrap.com/wOXpQZg4RHqHZllDWaD4_logo-eebhub-research-digest.jpg">
       <h5>
@@ -804,9 +804,9 @@
       </h1>
       <h5>
         Built by the
-        <a href="http://www.eebhub.org">Energy Efficient Buildings Hub</a>
+        <a href="http://www.buildsci.us">Energy Efficient Buildings Hub</a>
         , a
-        <a href="http://developer.eebhub.org/eebhub/doe-hubs.html">U.S. Department of Energy
+        <a href="http://developer.buildsci.us/eebhub/doe-hubs.html">U.S. Department of Energy
     Innovation Hub</a>
         , in 2013
         <div>
@@ -818,7 +818,7 @@
             <a href="http://www.joshwentz.net/">Josh Wentz</a>
             , Ying Sun, Nick Mattise, Payam Delgoshaei
             <div>
-              <a href="http://tools.eebhub.org/team"><span style="font-weight: normal;">Entire 53 Person Simulation &amp; Modeling Team here</span></a>
+              <a href="http://tools.buildsci.us/team"><span style="font-weight: normal;">Entire 53 Person Simulation &amp; Modeling Team here</span></a>
               &nbsp;|&nbsp;
               <span style="font-weight: normal; color: inherit; font-family: inherit;">Infographic Webpage above designed &amp; developed by </span>
               <a href="http://www.joshwentz.net" style="font-weight: normal; font-family: inherit;">Josh Wentz</a>
