--- a/views/comprehensive_auth.ejs
+++ b/views/comprehensive_auth.ejs
@@ -227,7 +227,7 @@
                                             <option value="CAN_BC_Vancouver.718920_CWEC">Vancouver, CAN</option>
                                         </select>
                                         <span class="add-on">
-                                            <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                            <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                         </span>
                                     </div>
                                 </div>
@@ -620,7 +620,7 @@
                     <div id="box-unit">
                         <button type="submit" onclick="saveBuildingComprehensive();" class="btn btn-large btn-success">Save Building (comprehensive)</button>
                         <input type="submit" class="btn btn-large btn-primary" value="SIMULATE">
-                        <a class="btn btn-large btn-info" href="http://128.118.67.241/tools.eebhub.org/energy-use.php"><i class="icon-signal"></i> Example Outputs</a>
+                        <a class="btn btn-large btn-info" href="http://128.118.67.241/tools.buildsci.us/energy-use.php"><i class="icon-signal"></i> Example Outputs</a>
                         <img style="text-align:right;float:right;" src="img/doe-engines.png" alt="DOE" width="250" height="58">
                         <br style="clear:both" />
                         <h2 class="text-right">
@@ -1006,7 +1006,7 @@
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             
-              ga('create', 'UA-26348074-7', 'eebhub.org');
+              ga('create', 'UA-26348074-7', 'buildsci.us');
               ga('send', 'pageview');
             
             </script>
