--- a/views/full_page.html
+++ b/views/full_page.html
@@ -228,7 +228,7 @@
                                             <option value="CAN_BC_Vancouver.718920_CWEC">Vancouver, CAN</option>
                                         </select>
                                         <span class="add-on">
-                                            <a href="http://developer.eebhub.org/weather.html" target="_blank">
+                                            <a href="http://developer.buildsci.us/weather.html" target="_blank">
                                                 <i class="icon-map-marker"></i>
                                             </a>
                                         </span>
@@ -765,7 +765,7 @@
                                     <tr>
                                         <td>
                                             <span>
-                                                <a href="http://developer.eebhub.org/archives/utilities/MeterConsumptionDataSpreadsheet_metered_en.xls">Spreadsheet Template</a>&nbsp;&nbsp;</span>
+                                                <a href="http://developer.buildsci.us/archives/utilities/MeterConsumptionDataSpreadsheet_metered_en.xls">Spreadsheet Template</a>&nbsp;&nbsp;</span>
                                         </td>
                                         <td>
                                             <div class="fileupload fileupload-new" data-provides="fileupload">
@@ -874,7 +874,7 @@
                         </h2>
                     </div>
                     <div class="box-unit">
-                        <a class="btn btn-large btn-warning" href="http://developer.eebhub.org/utrc/uncertainty/riskanalysis.html">
+                        <a class="btn btn-large btn-warning" href="http://developer.buildsci.us/utrc/uncertainty/riskanalysis.html">
                             <i class="icon-exclamation-sign"></i>Risk Analysis</a>
                         <img style="text-align:right;float:right;" src="img/utrc.png" alt="UTRC" width="120" height="42">
                         <br>
