--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,7 +4,7 @@
 <head>
     <title>EEB Hub Simulation Platform</title>
     <!--<meta http-equiv="refresh"
-        content="0; url=http://tools.eebhub.org/lite"> -->
+        content="0; url=http://tools.buildsci.us/lite"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="icon" href="img/favicon.ico" type="image/x-icon">
@@ -136,7 +136,7 @@
         <h4 class="text-center">building industry stakeholders will be empowered to make informed decisions on <a href="/game/tracking-sheet.php" style="color: inherit;">how to REDUCE ENERGY consumption in BUILDINGS</a></h4>
         <br/>
         <div class="pagination-centered">
-            <a href="http://www.eebhub.org"><img src="img/eebhub-gray7.png" width="120" height="86" alt="eebhub" /></a>
+            <a href="http://www.buildsci.us"><img src="img/eebhub-gray7.png" width="120" height="86" alt="eebhub" /></a>
         </div>
         <h4 class="text-center">the Energy Efficient Buildings Hub is pioneering the tools to make this possible, proven, &amp; easy</h4>
     </div>
@@ -293,7 +293,7 @@
         </div>
     </div>
     <div class="footer">
-        <h5 class="text-center">Built by the <a href="http://www.eebhub.org">Energy Efficient Buildings Hub</a>, a <a href="http://developer.eebhub.org/eebhub/doe-hubs.html">U.S. Department of Energy Innovation Hub</a>, in 2013</h5>
+        <h5 class="text-center">Built by the <a href="http://www.buildsci.us">Energy Efficient Buildings Hub</a>, a <a href="http://developer.buildsci.us/eebhub/doe-hubs.html">U.S. Department of Energy Innovation Hub</a>, in 2013</h5>
         <h6 class="text-center" style="color:gray; font-weight:normal;">NOTE | We recommend Firefox, Chrome, or Safari web browsers. Internet Explorer is not fully supported. |
         COMMUNITY | 
             <a href="http://area51.stackexchange.com/proposals/45232/building-performance-simulation-analysis?tab=votes&phase=definition">Building Performance Q&A</a> | 
