--- a/views/home.html
+++ b/views/home.html
@@ -4,7 +4,7 @@
 <head>
     <title>EEB Hub Simulation Platform Tools</title>
     <!--<meta http-equiv="refresh"
-        content="0; url=http://tools.eebhub.org/lite"> -->
+        content="0; url=http://tools.buildsci.us/lite"> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -331,7 +331,7 @@
         </div>
         <div style="width:25%;float:left;">
             <figure>
-                <a href="http://tools.eebhub.org/ideas">
+                <a href="http://tools.buildsci.us/ideas">
                     <img src="img/iconmonstr-light-bulb-18-icon.svg">
                 </a>
                 <figcaption>
@@ -364,7 +364,7 @@
     </div>
     <hr style="color:black;background-color:black;">
     <div class="footer">
-        <h5 class="text-center">Built by the <a href="http://www.eebhub.org">Energy Efficient Buildings HUB</a>, a <a href="http://energy.gov/science-innovation/innovation/hubs">U.S. Department of Energy Innovation HUB</a>.</h5>
+        <h5 class="text-center">Built by the <a href="http://www.buildsci.us">Energy Efficient Buildings HUB</a>, a <a href="http://energy.gov/science-innovation/innovation/hubs">U.S. Department of Energy Innovation HUB</a>.</h5>
         <h5 class="text-center">Our simulation & modeling team includes PSU, MIT, CMU, UMaryland, UPenn, IBM, UTRC, Balfour Beatty, NIST, & NREL.</h5>
         <h5 class="text-center"><a href="https://github.com/eebhub/platform/blob/master/ACKNOWLEDGEMENT_DISCLAIMER">Acknowledgement & Disclaimer</a>. &#8194;</h5>
     </div>
