--- a/views/imtresults_3p.ejs
+++ b/views/imtresults_3p.ejs
@@ -5,10 +5,10 @@
         <title>EEB Hub Simulation Platform Tools</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
-        <link href="http://tools.eebhub.org/css/bootstrap.min.css" rel="stylesheet">
-        <link href="http://tools.eebhub.org/css/bootstrap-responsive.min.css" rel="stylesheet">
-        <link href="http://tools.eebhub.org/css/partial.css" rel="stylesheet" />
-        <link href="http://tools.eebhub.org/css/stylesheet.css" rel="stylesheet" />
+        <link href="http://tools.buildsci.us/css/bootstrap.min.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/bootstrap-responsive.min.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/partial.css" rel="stylesheet" />
+        <link href="http://tools.buildsci.us/css/stylesheet.css" rel="stylesheet" />
         <style type="text/css">
             body {
                 padding-top: 60px;
@@ -543,13 +543,13 @@
                                     </ul>
                                     <div class="tab-content">
                                         <div class="tab-pane active" id="shell">
-                                            <img src="http://tools.eebhub.org/img/lite/Picture1.png" class="img-polaroid" height="90%" width="90%">
+                                            <img src="http://tools.buildsci.us/img/lite/Picture1.png" class="img-polaroid" height="90%" width="90%">
                                         </div>
                                         <div class="tab-pane" id="internal">
-                                            <img src="http://tools.eebhub.org/img/lite/Picture2.png" class="img-polaroid" height="90%" width="90%">
+                                            <img src="http://tools.buildsci.us/img/lite/Picture2.png" class="img-polaroid" height="90%" width="90%">
                                         </div>
                                         <div class="tab-pane" id="portfolio">
-                                            <img src="http://tools.eebhub.org/img/lite/Picture3.png" class="img-polaroid" height="90%" width="90%">
+                                            <img src="http://tools.buildsci.us/img/lite/Picture3.png" class="img-polaroid" height="90%" width="90%">
                                         </div>
                                     </div>
                                 </div>
@@ -576,10 +576,10 @@
                 </div>
             </div>
             <!-- Javascript -->
-            <script src="http://tools.eebhub.org/js/bootstrap-scrollspy.js"></script>
+            <script src="http://tools.buildsci.us/js/bootstrap-scrollspy.js"></script>
             <script src="http://code.highcharts.com/highcharts.js"></script>
             <script src="http://code.highcharts.com/modules/exporting.js"></script>
-            <script src="http://tools.eebhub.org/js/bootstrap.min.js"></script>
+            <script src="http://tools.buildsci.us/js/bootstrap.min.js"></script>
     </body>
 
 </html>
