--- a/views/lite.ejs
+++ b/views/lite.ejs
@@ -3,24 +3,24 @@
     
     <head>
         <title>EEB Hub Simulation Platform</title>
-        <link rel="shortcut icon" href="http://tools.eebhub.org/img/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="http://tools.eebhub.org/img/favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="http://tools.buildsci.us/img/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="http://tools.buildsci.us/img/favicon.ico" type="image/x-icon">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
 
-        <link href="http://tools.eebhub.org/css/bootstrap.min.css" rel="stylesheet">
-        <link href="http://tools.eebhub.org/css/stylesheet.css" rel="stylesheet">
-        <link href="http://tools.eebhub.org/css/partial.css" rel="stylesheet">
-        <link href="http://tools.eebhub.org/css/bootstrap-responsive.min.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/bootstrap.min.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/stylesheet.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/partial.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/bootstrap-responsive.min.css" rel="stylesheet">
 
         <style type="text/css">
 
         </style>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.4.0/ui-bootstrap-tpls.min.js"></script>
-        <link href="http://tools.eebhub.org/css/bootstrap-fileupload.css" rel="stylesheet">
-        <script src="http://tools.eebhub.org/js/building101Data.js"></script>
-        <script src="http://tools.eebhub.org/js/unit-convert.js"></script>
+        <link href="http://tools.buildsci.us/css/bootstrap-fileupload.css" rel="stylesheet">
+        <script src="http://tools.buildsci.us/js/building101Data.js"></script>
+        <script src="http://tools.buildsci.us/js/unit-convert.js"></script>
 
   <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
 
@@ -170,8 +170,8 @@ $('#utilityDataFile').change(function(){
 });
 </script>
 
-        <script src="http://tools.eebhub.org/js/dist/html5shiv.js"></script>
-        <script src="http://tools.eebhub.org/js/dist/html5shiv-printshiv.js"></script>
+        <script src="http://tools.buildsci.us/js/dist/html5shiv.js"></script>
+        <script src="http://tools.buildsci.us/js/dist/html5shiv-printshiv.js"></script>
     </head>
     
     <body data-spy="scroll" data-target=".bs-docs-sidebar" ng-app="myApp" class="ng-scope" onload="buildingInfoPop();">
@@ -261,7 +261,7 @@ $('#utilityDataFile').change(function(){
                          </li>
                          <li>
                         
-                             <a class="nohover" href="http://ibm.eebhub.org:8080/EEBHubND/Main.html" target="_blank"><i class="icon-signal"></i><b> Example IBM Tool</b></a>
+                             <a class="nohover" href="http://ibm.buildsci.us:8080/EEBHubND/Main.html" target="_blank"><i class="icon-signal"></i><b> Example IBM Tool</b></a>
                          </li>
                          </li>
                          <li style="padding-bottom:15px;">
@@ -318,7 +318,7 @@ $('#utilityDataFile').change(function(){
                                                 <option>Vancouver, CAN</option>
                                             </select>
                                             <span class="add-on">
-                                                <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                                <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                             </span>
                                         </div>
                                         <h4>Year Built</h4>
@@ -390,7 +390,7 @@ $('#utilityDataFile').change(function(){
                                 <br>
                                 <div class="row">
                                     <div class="span4">            
-                                          <a href="http://developer.eebhub.org/archives/utilitydata/MeterConsumptionData.xlsx" class="btn btn-large btn-block"><i class="icon-arrow-down"></i><b>Spreadsheet Template</b></a>
+                                          <a href="http://developer.buildsci.us/archives/utilitydata/MeterConsumptionData.xlsx" class="btn btn-large btn-block"><i class="icon-arrow-down"></i><b>Spreadsheet Template</b></a>
                                     </div>            
                                     <div class="span4">            
                                         <div class="fileupload fileupload-new" data-provides="fileupload">
@@ -873,7 +873,7 @@ $('#utilityDataFile').change(function(){
                                     <table class="text-right" style="float:right;">
                                         <tr>
                                             <td>
-                                               <span><a href="http://developer.eebhub.org/archives/utilities/MeterConsumptionDataSpreadsheet_metered_en.xls">Spreadsheet Template</a>&nbsp;&nbsp;</span>
+                                               <span><a href="http://developer.buildsci.us/archives/utilities/MeterConsumptionDataSpreadsheet_metered_en.xls">Spreadsheet Template</a>&nbsp;&nbsp;</span>
                                             </td>
                                             <td>
                                                 <div class="fileupload fileupload-new" data-provides="fileupload">
@@ -934,8 +934,8 @@ $('#utilityDataFile').change(function(){
                                                 </tr>
                                                 <tr>
                                                     <td><h5>3.</h5></td>
-                                                    <td><img src="http://tools.eebhub.org/img/portfolio-download.png"></td>
-                                                    <td><h5><a href="http://developer.eebhub.org/archives/utilities/Building%20101.xlsx">[example]</a></h5></td>
+                                                    <td><img src="http://tools.buildsci.us/img/portfolio-download.png"></td>
+                                                    <td><h5><a href="http://developer.buildsci.us/archives/utilities/Building%20101.xlsx">[example]</a></h5></td>
                                                 </tr>
                                                 <tr>
                                                     <td><h5>4.</h5></td>
@@ -974,8 +974,8 @@ $('#utilityDataFile').change(function(){
                                         </div>
                                         <div class="span8" style="text-align:right;float:right;">
                                             <span>Learn More about
-                                            <a href="https://portfoliomanager.energystar.gov/pm/login.html" target="_blank"><img src="http://tools.eebhub.org/img/portfolio-manager.png" width="150" height="48"></a>
-                                            <a href="http://www1.eere.energy.gov/buildings/commercial/assetscore.html" target="_blank"><img src="http://tools.eebhub.org/img/asset-score.png" width="150" height="48"></a>
+                                            <a href="https://portfoliomanager.energystar.gov/pm/login.html" target="_blank"><img src="http://tools.buildsci.us/img/portfolio-manager.png" width="150" height="48"></a>
+                                            <a href="http://www1.eere.energy.gov/buildings/commercial/assetscore.html" target="_blank"><img src="http://tools.buildsci.us/img/asset-score.png" width="150" height="48"></a>
                                             </span>
                                         </div>
                                     </div>
@@ -992,7 +992,7 @@ $('#utilityDataFile').change(function(){
                         </script>
                             <button type="submit" onclick="submitIMT()" class="btn btn-large btn-primary">SIMULATE</button>
                             <a target="_blank" href="http://repository.tamu.edu/handle/1969.1/2847">
-                            <img style="text-align:right;float:right;" src="http://tools.eebhub.org/img/ashrae.png" alt="ASHRAE" width="85" height="59">
+                            <img style="text-align:right;float:right;" src="http://tools.buildsci.us/img/ashrae.png" alt="ASHRAE" width="85" height="59">
                             </a>
                             <br style="clear:both" />
                             <h2 class="text-right">
@@ -1116,7 +1116,7 @@ $('#utilityDataFile').change(function(){
                     <div class="box-unit">
                         <button onclick="submitIBM()" class="btn btn-large btn-primary">SIMULATE</button>
                         <a target="_blank" href="http://domino.research.ibm.com/library/cyberdig.nsf/papers/7A83DFDC8478F8D285257BA200550772/$File/rc25393.pdf">
-                         <img style="text-align:right;float:right;" src="http://tools.eebhub.org/img/ibm.png" alt="IBM" width="90" height="36">
+                         <img style="text-align:right;float:right;" src="http://tools.buildsci.us/img/ibm.png" alt="IBM" width="90" height="36">
                          </a>
                         <h2 class="text-right">
                             <small>powered by <a target="_blank" href="http://domino.research.ibm.com/library/cyberdig.nsf/papers/7A83DFDC8478F8D285257BA200550772/$File/rc25393.pdf" style="color:inherit;">IBM Portfolio Inverse Modeling Engine</a></small>
@@ -1157,8 +1157,8 @@ $('#utilityDataFile').change(function(){
                                     <div class="row">
                                          <div class="span7" style="text-align:right;float:right;">
                                                 <span>Learn more about
-                                                <a href="http://www.energystar.gov/buildings/facility-owners-and-managers/existing-buildings/use-portfolio-manager" target="_blank"><img src="http://tools.eebhub.org/img/portfolio-manager.png" width="150" height="48"></a>
-                                                <a href="http://www1.eere.energy.gov/buildings/commercial/assetscore.html" target="_blank"><img src="http://tools.eebhub.org/img/asset-score.png" width="150" height="48"></a>
+                                                <a href="http://www.energystar.gov/buildings/facility-owners-and-managers/existing-buildings/use-portfolio-manager" target="_blank"><img src="http://tools.buildsci.us/img/portfolio-manager.png" width="150" height="48"></a>
+                                                <a href="http://www1.eere.energy.gov/buildings/commercial/assetscore.html" target="_blank"><img src="http://tools.buildsci.us/img/asset-score.png" width="150" height="48"></a>
                                                 </span>
                                         </div>
                                     </div>
@@ -1200,9 +1200,9 @@ $('#utilityDataFile').change(function(){
                                 <div class="span8" style="text-align:right;float:right;">
                                     <span>Learn more about
                                         <a href="https://portfoliomanager.energystar.gov/pm/login.html"
-                                        target="_blank"><img src="http://tools.eebhub.org/img/portfolio-manager.png" width="150" height="48"></a>
+                                        target="_blank"><img src="http://tools.buildsci.us/img/portfolio-manager.png" width="150" height="48"></a>
                                         <a href="http://www1.eere.energy.gov/buildings/commercial/assetscore.html"
-                                        target="_blank"><img src="http://tools.eebhub.org/img/asset-score.png" width="150" height="48"></a>
+                                        target="_blank"><img src="http://tools.buildsci.us/img/asset-score.png" width="150" height="48"></a>
                                     </span>
                                 </div>
                             </div>
@@ -1219,17 +1219,17 @@ $('#utilityDataFile').change(function(){
         <!-- Javascript -->
         <script src="js/uservoice-contact.js"></script>
         <script src="http://code.jquery.com/jquery.js"></script>
-        <script src="http://tools.eebhub.org/js/bootstrap.min.js"></script>
-        <script src="http://tools.eebhub.org/js/highcharts.js"></script>
-        <script src="http://tools.eebhub.org/js/bootstrap-scrollspy.js"></script>
-        <script src="http://tools.eebhub.org/js/bootstrap-collapse.js"></script>
+        <script src="http://tools.buildsci.us/js/bootstrap.min.js"></script>
+        <script src="http://tools.buildsci.us/js/highcharts.js"></script>
+        <script src="http://tools.buildsci.us/js/bootstrap-scrollspy.js"></script>
+        <script src="http://tools.buildsci.us/js/bootstrap-collapse.js"></script>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         
-          ga('create', 'UA-26348074-7', 'eebhub.org');
+          ga('create', 'UA-26348074-7', 'buildsci.us');
           ga('send', 'pageview');
         
         </script>
