--- a/views/lite.html
+++ b/views/lite.html
@@ -169,7 +169,7 @@
                                                 <option>Vancouver, CAN</option>
                                             </select>
                                             <span class="add-on">
-                                                <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                                <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                             </span>
                                         </div>
                                     </div>
@@ -438,7 +438,7 @@
                                     <table class="text-right" style="float:right;">
                                         <tr>
                                             <td>
-                                               <span><a href="http://developer.eebhub.org/archives/utilities/MeterConsumptionDataSpreadsheet_metered_en.xls">Spreadsheet Template</a>&nbsp;&nbsp;</span>
+                                               <span><a href="http://developer.buildsci.us/archives/utilities/MeterConsumptionDataSpreadsheet_metered_en.xls">Spreadsheet Template</a>&nbsp;&nbsp;</span>
                                             </td>
                                             <td>
                                                 <div class="fileupload fileupload-new" data-provides="fileupload">
@@ -500,7 +500,7 @@
                                                 <tr>
                                                     <td><h5>3.</h5></td>
                                                     <td><img src="img/portfolio-download.png"></td>
-                                                    <td><h5><a href="http://developer.eebhub.org/archives/utilities/Building%20101.xlsx">[example]</a></h5></td>
+                                                    <td><h5><a href="http://developer.buildsci.us/archives/utilities/Building%20101.xlsx">[example]</a></h5></td>
                                                 </tr>
                                                 <tr>
                                                     <td><h5>4.</h5></td>
@@ -698,7 +698,7 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         
-          ga('create', 'UA-26348074-7', 'eebhub.org');
+          ga('create', 'UA-26348074-7', 'buildsci.us');
           ga('send', 'pageview');
         
         </script>
