--- a/views/lite_auth.ejs
+++ b/views/lite_auth.ejs
@@ -5,10 +5,10 @@
         <title>EEB Hub Simulation Platform Tools</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
-        <link href="http://tools.eebhub.org/css/bootstrap.min.css" rel="stylesheet">
-        <link href="http://tools.eebhub.org/css/stylesheet.css" rel="stylesheet">
-        <link href="http://tools.eebhub.org/css/partial.css" rel="stylesheet">
-        <link href="http://tools.eebhub.org/css/bootstrap-responsive.min.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/bootstrap.min.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/stylesheet.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/partial.css" rel="stylesheet">
+        <link href="http://tools.buildsci.us/css/bootstrap-responsive.min.css" rel="stylesheet">
         <style type="text/css">
             body {
                 padding-top: 60px;
@@ -18,9 +18,9 @@
         </style>
         <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/angularjs/1.0.7/angular.min.js"></script>
         <script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/0.4.0/ui-bootstrap-tpls.min.js"></script>
-        <link href="http://tools.eebhub.org/css/bootstrap-fileupload.css" rel="stylesheet">
-        <script src="http://tools.eebhub.org/js/building101Data.js"></script>
-        <script src="http://tools.eebhub.org/js/unit-convert.js"></script>
+        <link href="http://tools.buildsci.us/css/bootstrap-fileupload.css" rel="stylesheet">
+        <script src="http://tools.buildsci.us/js/building101Data.js"></script>
+        <script src="http://tools.buildsci.us/js/unit-convert.js"></script>
         <script>
             function submitIMT() {
                 var form = document.forms.platformForm;
@@ -184,7 +184,7 @@
                                                 <option>Vancouver, CAN</option>
                                             </select>
                                             <span class="add-on">
-                                                <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                                <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                             </span>
                                         </div>
                                     </div>
@@ -453,7 +453,7 @@
                                     <table class="text-right" style="float:right;">
                                         <tr>
                                             <td>
-                                               <span><a href="http://developer.eebhub.org/archives/utilities/MeterConsumptionDataSpreadsheet_metered_en.xls">Spreadsheet Template</a>&nbsp;&nbsp;</span>
+                                               <span><a href="http://developer.buildsci.us/archives/utilities/MeterConsumptionDataSpreadsheet_metered_en.xls">Spreadsheet Template</a>&nbsp;&nbsp;</span>
                                             </td>
                                             <td>
                                                 <div class="fileupload fileupload-new" data-provides="fileupload">
@@ -514,8 +514,8 @@
                                                 </tr>
                                                 <tr>
                                                     <td><h5>3.</h5></td>
-                                                    <td><img src="http://tools.eebhub.org/img/portfolio-download.png"></td>
-                                                    <td><h5><a href="http://developer.eebhub.org/archives/utilities/Building%20101.xlsx">[example]</a></h5></td>
+                                                    <td><img src="http://tools.buildsci.us/img/portfolio-download.png"></td>
+                                                    <td><h5><a href="http://developer.buildsci.us/archives/utilities/Building%20101.xlsx">[example]</a></h5></td>
                                                 </tr>
                                                 <tr>
                                                     <td><h5>4.</h5></td>
@@ -554,8 +554,8 @@
                                         </div>
                                         <div class="span8" style="text-align:right;float:right;">
                                             <span>Learn More about
-                                            <a href="https://portfoliomanager.energystar.gov/pm/login.html" target="_blank"><img src="http://tools.eebhub.org/img/portfolio-manager.png" width="150" height="48"></a>
-                                            <a href="http://www1.eere.energy.gov/buildings/commercial/assetscore.html" target="_blank"><img src="http://tools.eebhub.org/img/asset-score.png" width="150" height="48"></a>
+                                            <a href="https://portfoliomanager.energystar.gov/pm/login.html" target="_blank"><img src="http://tools.buildsci.us/img/portfolio-manager.png" width="150" height="48"></a>
+                                            <a href="http://www1.eere.energy.gov/buildings/commercial/assetscore.html" target="_blank"><img src="http://tools.buildsci.us/img/asset-score.png" width="150" height="48"></a>
                                             </span>
                                         </div>
                                     </div>
@@ -567,7 +567,7 @@
                             <button type="submit" onclick="submitBuilding()" class="btn btn-large btn-success">Save Building (lite)</button>
                             <button type="submit" onclick="submitIMT()" class="btn btn-large btn-primary">SIMULATE</button>
                             <a class="btn btn-large btn-info" href="literesults"><i class="icon-signal"></i> Example Outputs</a>
-                            <img style="text-align:right;float:right;" src="http://tools.eebhub.org/img/ashrae.png" alt="ASHRAE" width="85" height="59">
+                            <img style="text-align:right;float:right;" src="http://tools.buildsci.us/img/ashrae.png" alt="ASHRAE" width="85" height="59">
                             <br style="clear:both" />
                             <h2 class="text-right">
                                 <small>powered by ASHRAE Inverse Modeling Toolkit</small>
@@ -680,7 +680,7 @@
                         
                         <button onclick="submitIBM()" class="btn btn-large btn-primary">SIMULATE</button>
                         <a class="btn btn-large btn-info" href="http://eebhub.minus.com/mbw8FJL02UdsL2"><i class="icon-signal"></i> Example Outputs</a>
-                         <img style="text-align:right;float:right;" src="http://tools.eebhub.org/img/ibm.png" alt="IBM" width="90" height="36">
+                         <img style="text-align:right;float:right;" src="http://tools.buildsci.us/img/ibm.png" alt="IBM" width="90" height="36">
                         <h2 class="text-right">
                             <small>powered by IBM Inverse Modeling Engine</small>
                         </h2>
@@ -691,7 +691,7 @@
                     <div class="box-unit">
                     <h2>utility data input text area</h2>
                     <div class="pull-right" style="text-align:right">
-                    <p><a href="http://developer.eebhub.org/imt/sample_utility_data.txt">Sample input</a></p>
+                    <p><a href="http://developer.buildsci.us/imt/sample_utility_data.txt">Sample input</a></p>
                     </div>
                     <textarea style="width: 640px; height: 120px" name="utility_data_time_series" form="platformForm">paste your utility data here</textarea>
                     
@@ -706,16 +706,16 @@
         </div>
         <!-- Javascript -->
         <script src="http://code.jquery.com/jquery.js"></script>
-        <script src="http://tools.eebhub.org/js/bootstrap.min.js"></script>
-        <script src="http://tools.eebhub.org/js/bootstrap-scrollspy.js"></script>
-        <script src="http://tools.eebhub.org/js/bootstrap-collapse.js"></script>
+        <script src="http://tools.buildsci.us/js/bootstrap.min.js"></script>
+        <script src="http://tools.buildsci.us/js/bootstrap-scrollspy.js"></script>
+        <script src="http://tools.buildsci.us/js/bootstrap-collapse.js"></script>
         <script>
           (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         
-          ga('create', 'UA-26348074-7', 'eebhub.org');
+          ga('create', 'UA-26348074-7', 'buildsci.us');
           ga('send', 'pageview');
         
         </script>
