--- a/views/news.html
+++ b/views/news.html
@@ -27,7 +27,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="brand" href="http://tools.eebhub.org/">EEB Hub Simulation Platform</a>
+                    <a class="brand" href="http://tools.buildsci.us/">EEB Hub Simulation Platform</a>
                     <div class="nav-collapse collapse">
                         <ul class="nav">
                             <li>
@@ -47,49 +47,49 @@
             </div>
         </div>
         <br>
-        <h1 class="text-center">News about tools.eebhub.org</h1>
+        <h1 class="text-center">News about tools.buildsci.us</h1>
         <br>
         <hr>
         <br>
         <div class="row-fluid">
             <div class="span6 text-center">
-            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="259" src="http://developer.eebhub.org/eebhub/NEWS/news_files/card(1).html" id="emb_58659572fb6549daa5638bda4e3de3ea" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
+            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="259" src="http://developer.buildsci.us/eebhub/NEWS/news_files/card(1).html" id="emb_58659572fb6549daa5638bda4e3de3ea" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
             </div>
             <div class="span6 text-center">
-            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="194" src="http://developer.eebhub.org/eebhub/NEWS/news_files/card(2).html" id="emb_6b7affc85a394f35b3f23f0353a16ea6" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
-            </div>
-        </div>
-        <br>
-        <div class="row-fluid">
-            <div class="span6 text-center">
-            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="199" src="http://developer.eebhub.org/eebhub/NEWS/news_files/card(6).html" id="emb_fb89dd1c175e493facffd25ef92deff0" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
-            </div>
-            <div class="span6 text-center">
-            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="381" src="http://developer.eebhub.org/eebhub/NEWS/news_files/card.html" id="emb_37f4052212024fb2a640a969214620bc" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
+            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="194" src="http://developer.buildsci.us/eebhub/NEWS/news_files/card(2).html" id="emb_6b7affc85a394f35b3f23f0353a16ea6" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
             </div>
         </div>
         <br>
         <div class="row-fluid">
             <div class="span6 text-center">
-            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="214" src="http://developer.eebhub.org/eebhub/NEWS/news_files/card(3).html" id="emb_cb29d3dc2ca945e3984fba0c31bfc804" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
+            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="199" src="http://developer.buildsci.us/eebhub/NEWS/news_files/card(6).html" id="emb_fb89dd1c175e493facffd25ef92deff0" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
             </div>
             <div class="span6 text-center">
-            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="214" src="http://developer.eebhub.org/eebhub/NEWS/news_files/card(4).html" id="emb_f2e5c0559b214a12967a1a19f496914b" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
+            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="381" src="http://developer.buildsci.us/eebhub/NEWS/news_files/card.html" id="emb_37f4052212024fb2a640a969214620bc" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
             </div>
         </div>
         <br>
         <div class="row-fluid">
             <div class="span6 text-center">
-            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="401" src="http://developer.eebhub.org/eebhub/NEWS/news_files/card(5).html" id="emb_fb283d7dbfd047c992060f7a0a8c3e38" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
+            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="214" src="http://developer.buildsci.us/eebhub/NEWS/news_files/card(3).html" id="emb_cb29d3dc2ca945e3984fba0c31bfc804" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
             </div>
             <div class="span6 text-center">
-            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="401" src="http://developer.eebhub.org/eebhub/NEWS/news_files/card(7).html" id="emb_ff4c41e160704010918e6274944be089" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
+            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="214" src="http://developer.buildsci.us/eebhub/NEWS/news_files/card(4).html" id="emb_f2e5c0559b214a12967a1a19f496914b" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
+            </div>
+        </div>
+        <br>
+        <div class="row-fluid">
+            <div class="span6 text-center">
+            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="401" src="http://developer.buildsci.us/eebhub/NEWS/news_files/card(5).html" id="emb_fb283d7dbfd047c992060f7a0a8c3e38" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
+            </div>
+            <div class="span6 text-center">
+            <iframe frameborder="0" scrolling="no" allowtransparency="true" width="600" height="401" src="http://developer.buildsci.us/eebhub/NEWS/news_files/card(7).html" id="emb_ff4c41e160704010918e6274944be089" class="embedly-card" style="display:block;max-width:99%;min-width:200px;margin:10px auto"></iframe>
             </div>
         </div>
         <br>
         <hr>
         <br>
-        <h4 class="text-center">Read even more at <a href="http://www.eebhub.org/research-digest/modeling">EEB Hub Research Digest</a> and <a href="http://eebhub.org/hublog/">The HUBlog</a>.</h4>
+        <h4 class="text-center">Read even more at <a href="http://www.buildsci.us/research-digest/modeling">EEB Hub Research Digest</a> and <a href="http://buildsci.us/hublog/">The HUBlog</a>.</h4>
         <h5 class="text-center" style="color:gray;"><i>If news articles do not load, refresh the page.</i></h5>
         <!-- Intro -->
         <!-- Javascript -->
@@ -101,7 +101,7 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         
-          ga('create', 'UA-26348074-7', 'eebhub.org');
+          ga('create', 'UA-26348074-7', 'buildsci.us');
           ga('send', 'pageview');
         
         </script>
