--- a/views/presentation.html
+++ b/views/presentation.html
@@ -4,7 +4,7 @@
     <head>
         <title>EEB Hub Simulation Platform Tools</title>
         <!--<meta http-equiv="refresh"
-        content="0; url=http://tools.eebhub.org/lite"> -->
+        content="0; url=http://tools.buildsci.us/lite"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
         <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -43,7 +43,7 @@
                             <li><a href="/comprehensive">COMPREHENSIVE</a></li>
                         </ul>
                         <ul class="nav pull-right">
-                        <li><a href="http://developer.eebhub.org/archives/presentations/EEB_HUB_Simulation_Platform_Workflow_9-25-2013.pptx">Download PowerPoint</a></li>
+                        <li><a href="http://developer.buildsci.us/archives/presentations/EEB_HUB_Simulation_Platform_Workflow_9-25-2013.pptx">Download PowerPoint</a></li>
 						</ul>
                     </div>
                     <!--/.nav-collapse -->
@@ -65,7 +65,7 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         
-          ga('create', 'UA-26348074-7', 'eebhub.org');
+          ga('create', 'UA-26348074-7', 'buildsci.us');
           ga('send', 'pageview');
         
         </script>
