--- a/views/substantial.ejs
+++ b/views/substantial.ejs
@@ -301,7 +301,7 @@
                                             <option value="">Vancouver, CAN</option>
                                         </select>
                                         <span class="add-on">
-                                            <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                            <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                         </span>
                                     </div>
                                 </div>
@@ -978,7 +978,7 @@
                     <h2 class="text-right"><small>powered by PSU & UTRC Energy Audit Tool</small></h2>
                 </div>
                <div class="box-unit">
-                    <a class="btn btn-large gray" href="http://developer.eebhub.org/utrc/uncertainty/riskanalysis.html" target="_blank"> Risk/Uncertainty Analysis </a>
+                    <a class="btn btn-large gray" href="http://developer.buildsci.us/utrc/uncertainty/riskanalysis.html" target="_blank"> Risk/Uncertainty Analysis </a>
                      <a target='_blank' href="http://www.conftool.com/2012Purdue/index.php?page=browseSessions&metadata=show&form_session=65">
                      <img style="text-align:right;float:right;padding-top:7px;" src="img/utrc-long.png" alt="UTRC" height="34">
                      </a>
@@ -988,7 +988,7 @@
                      </h2>
                 </div>
                  <div class="box-unit">
-                     <a class="btn btn-large gray" href="http://developer.eebhub.org/upenn/" target="_blank"> System Control Optimization</a>
+                     <a class="btn btn-large gray" href="http://developer.buildsci.us/upenn/" target="_blank"> System Control Optimization</a>
                      <a target="_blank" href="http://www.design.upenn.edu/architecture">
                     <img style="text-align:right;float:right;" src="img/upenn.png" alt="UPENN" width="112" height="36">
                     </a>
@@ -1074,7 +1074,7 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         
-          ga('create', 'UA-26348074-7', 'eebhub.org');
+          ga('create', 'UA-26348074-7', 'buildsci.us');
           ga('send', 'pageview');
         
         </script>
