--- a/views/substantial_auth.ejs
+++ b/views/substantial_auth.ejs
@@ -281,7 +281,7 @@
                                                 <option>Vancouver, CAN</option>
                                         </select>
                                         <span class="add-on">
-                                            <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                            <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                         </span>
                                     </div>
                                 </div>
@@ -943,7 +943,7 @@
         
         
                 <div class="box-unit">
-                <a class="btn btn-large btn-warning" href="http://developer.eebhub.org/upenn/"><i class="icon-wrench"></i> System Control Optimization</a>
+                <a class="btn btn-large btn-warning" href="http://developer.buildsci.us/upenn/"><i class="icon-wrench"></i> System Control Optimization</a>
                 <img style="text-align:right;float:right;" src="img/upenn.png" alt="UPENN" width="112" height="36">
                 <h2 class="text-right"><small>powered by UPenn Parametric Analysis Toolkit</small></h2>
                 </div>
@@ -1029,7 +1029,7 @@
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
         
-          ga('create', 'UA-26348074-7', 'eebhub.org');
+          ga('create', 'UA-26348074-7', 'buildsci.us');
           ga('send', 'pageview');
         
         </script>
