--- a/views/substantialresults.ejs
+++ b/views/substantialresults.ejs
@@ -286,7 +286,7 @@
     </script>    
         
     <script>
-    var Link = "http://developer.eebhub.org/utrc/" + "<%= bldname %>"; 
+    var Link = "http://developer.buildsci.us/utrc/" + "<%= bldname %>"; 
     </script>
         
     </head>
