--- a/views/substantialsampleres.ejs
+++ b/views/substantialsampleres.ejs
@@ -90,9 +90,9 @@
         
 <h4>Building-101_2013-09-09_174903513</h4>
 <table>
-<tr><td><a href="http://developer.eebhub.org/utrc/Building-101_2013-09-09_174903513/Building-101_2013-09-09_174903513.xlsx">Building-101_2013-09-09_174903513.xlsx</a></td><td align="right">09-Sep-2013 13:49  </td><td align="right"> 13K</td><td>&nbsp;</td></tr>
-<tr><td><a href="http://developer.eebhub.org/utrc/Building-101_2013-09-09_174903513/Output_StageI.csv">Output_StageI.csv</a></td><td align="right">09-Sep-2013 13:51  </td><td align="right">1.0K</td><td>&nbsp;</td></tr>
-<tr><td><a href="http://developer.eebhub.org/utrc/Building-101_2013-09-09_174903513/example.xml">example.xml</a></td><td align="right">09-Sep-2013 13:49  </td><td align="right">434 </td><td>&nbsp;</td></tr>
+<tr><td><a href="http://developer.buildsci.us/utrc/Building-101_2013-09-09_174903513/Building-101_2013-09-09_174903513.xlsx">Building-101_2013-09-09_174903513.xlsx</a></td><td align="right">09-Sep-2013 13:49  </td><td align="right"> 13K</td><td>&nbsp;</td></tr>
+<tr><td><a href="http://developer.buildsci.us/utrc/Building-101_2013-09-09_174903513/Output_StageI.csv">Output_StageI.csv</a></td><td align="right">09-Sep-2013 13:51  </td><td align="right">1.0K</td><td>&nbsp;</td></tr>
+<tr><td><a href="http://developer.buildsci.us/utrc/Building-101_2013-09-09_174903513/example.xml">example.xml</a></td><td align="right">09-Sep-2013 13:49  </td><td align="right">434 </td><td>&nbsp;</td></tr>
 </table>
         
 
