--- a/views/team.ejs
+++ b/views/team.ejs
@@ -4,7 +4,7 @@
     <head>
         <title>EEB Hub Simulation Platform</title>
         <!--<meta http-equiv="refresh" content="0;
-        url=http://tools.eebhub.org/lite"> -->
+        url=http://tools.buildsci.us/lite"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
         <link rel="icon" href="img/favicon.ico" type="image/x-icon">
