--- a/views/casestudy.html
+++ b/views/casestudy.html
@@ -82,10 +82,10 @@
 <th style="width:12.5%;vertical-align:bottom;">Web Apps</th>
 </tr>
 <tr>
-<th><a href='http://developer.eebhub.org/archives/casestudies/pdfs/IBM_casestudies.pdf'><img src="img/ibm-full.png" width="66" height="26"></a></th>
-<td  height="50" style="background-color:white;opacity:0.6;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/IBM_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://128.118.67.251:8080/EEBHubData/EEBHubDBServlet?Command=OpenBuilding&BuildingName=B101'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
-<td  style="background-color:white;opacity:0.6;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/IBM_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://128.118.67.251:8080/EEBHubData/EEBHubDBServlet?Command=OpenBuilding&BuildingName=One Montgomery Plaza'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
-<td  style="background-color:white;opacity:0.6;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/IBM_casestudy3.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://128.118.67.251:8080/EEBHubData/EEBHubDBServlet?Command=OpenBuilding&BuildingName=Building 100'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
+<th><a href='http://developer.buildsci.us/archives/casestudies/pdfs/IBM_casestudies.pdf'><img src="img/ibm-full.png" width="66" height="26"></a></th>
+<td  height="50" style="background-color:white;opacity:0.6;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/IBM_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://128.118.67.251:8080/EEBHubData/EEBHubDBServlet?Command=OpenBuilding&BuildingName=B101'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
+<td  style="background-color:white;opacity:0.6;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/IBM_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://128.118.67.251:8080/EEBHubData/EEBHubDBServlet?Command=OpenBuilding&BuildingName=One Montgomery Plaza'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
+<td  style="background-color:white;opacity:0.6;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/IBM_casestudy3.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://128.118.67.251:8080/EEBHubData/EEBHubDBServlet?Command=OpenBuilding&BuildingName=Building 100'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
 <td><a class="svg" href="/lite">
         <img src="img/lite-house.svg" alt="lite simulation" width="25" height="25" />
     </a> <a href="http://128.118.67.244:8080/EEBESRI/">
@@ -94,10 +94,10 @@
 <td>
 </tr>
 <tr>
-<th><a href='http://developer.eebhub.org/archives/casestudies/pdfs/MIT_casestudies.pdf'><img src="http://tools.eebhub.org/img/mit-full.png" width="110" height="28"></a></th>
-<td height="50" style="background-color:white;opacity:0.5;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/MIT_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
-<td style="background-color:white;opacity:0.5;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/MIT_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
-<td style="background-color:white;opacity:0.5;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/MIT_casestudy3.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
+<th><a href='http://developer.buildsci.us/archives/casestudies/pdfs/MIT_casestudies.pdf'><img src="http://tools.buildsci.us/img/mit-full.png" width="110" height="28"></a></th>
+<td height="50" style="background-color:white;opacity:0.5;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/MIT_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
+<td style="background-color:white;opacity:0.5;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/MIT_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
+<td style="background-color:white;opacity:0.5;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/MIT_casestudy3.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
 <td><a class="svg" href="/partial">
         <img src="img/partial-house.svg" alt="partial simulation" width="25" height="25" />
     </a> <a href="http://designadvisor.mit.edu/design/">
@@ -107,28 +107,28 @@
 </tr>
 <tr>
 <th><img src="img/cmu-full.png" width='64' height="41"></th>
-<td height="50" style="background-color:white;opacity:0.6;"><a href='http://developer.eebhub.org/cmu/DesignAdvisor_CaseStudy_101.html'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
-<td style="background-color:white;opacity:0.6;"><a href='http://developer.eebhub.org/cmu/DesignAdvisor_CaseStudy_Montgomery.html'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
-<td style="background-color:white;opacity:0.6;"><a href='http://developer.eebhub.org/cmu/DesignAdvisor_CaseStudy_MCSI.html'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
+<td height="50" style="background-color:white;opacity:0.6;"><a href='http://developer.buildsci.us/cmu/DesignAdvisor_CaseStudy_101.html'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
+<td style="background-color:white;opacity:0.6;"><a href='http://developer.buildsci.us/cmu/DesignAdvisor_CaseStudy_Montgomery.html'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
+<td style="background-color:white;opacity:0.6;"><a href='http://developer.buildsci.us/cmu/DesignAdvisor_CaseStudy_MCSI.html'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
 <td><a class="svg" href="/partial">
         <img src="img/partial-house.svg" alt="lite simulation" width="25" height="25" />
     </a>
 <td>
 </tr>
 <tr>
-<th><a href='http://developer.eebhub.org/archives/casestudies/pdfs/UTRC_casestudies.pdf'><img src="http://tools.eebhub.org/img/utrc-long.png" width="120" height="22"></a></th>
-<td height="50" style="background-color:white;opacity:0.5;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/UTRC_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
-<td style="background-color:white;opacity:0.5;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/UTRC_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
-<td style="background-color:white;opacity:0.5;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/UTRC_casestudy3.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
+<th><a href='http://developer.buildsci.us/archives/casestudies/pdfs/UTRC_casestudies.pdf'><img src="http://tools.buildsci.us/img/utrc-long.png" width="120" height="22"></a></th>
+<td height="50" style="background-color:white;opacity:0.5;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/UTRC_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
+<td style="background-color:white;opacity:0.5;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/UTRC_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
+<td style="background-color:white;opacity:0.5;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/UTRC_casestudy3.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
 <td><a class="svg" href="/substantial">
         <img src="img/substantial-house.svg" alt="lite simulation" width="25" height="25" />
     </a>
 <td>
 </tr>
 <tr>
-<th><a href='http://developer.eebhub.org/archives/casestudies/pdfs/UPenn_casestudies.pdf'><img src="img/upenn-full.png" width="78" height="25"></a></th>
-<td height="50" style="background-color:white;opacity:0.6;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/UPenn_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://developer.eebhub.org/upenn/'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
-<td style="background-color:white;opacity:0.6;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/UPenn_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
+<th><a href='http://developer.buildsci.us/archives/casestudies/pdfs/UPenn_casestudies.pdf'><img src="img/upenn-full.png" width="78" height="25"></a></th>
+<td height="50" style="background-color:white;opacity:0.6;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/UPenn_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://developer.buildsci.us/upenn/'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
+<td style="background-color:white;opacity:0.6;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/UPenn_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
 <td style="background-color:white;opacity:0.6;"><h5>n.a.</h5></td>
 <td><a class="svg" href="/substantial">
         <img src="img/substantial-house.svg" alt="lite simulation" width="25" height="25" />
@@ -136,10 +136,10 @@
 <td>
 </tr>
 <tr>
-<th><a href='http://developer.eebhub.org/archives/casestudies/pdfs/PSU_casestudies.pdf'><img style="margin:auto;" src="http://tools.eebhub.org/img/psu-light2.png" width="95" height="44"></th>
-<td height="50" style="background-color:white;opacity:0.5;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/PSU_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://rmt.eebhub.org/comprehensive2/energy-use_example.php'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
-<td style="background-color:white;opacity:0.5;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/PSU_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://rmt.eebhub.org/comprehensive2/energy-use_example.php'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
-<td style="background-color:white;opacity:0.5;"><a href='http://developer.eebhub.org/archives/casestudies/pdfs/PSU_casestudy3.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
+<th><a href='http://developer.buildsci.us/archives/casestudies/pdfs/PSU_casestudies.pdf'><img style="margin:auto;" src="http://tools.buildsci.us/img/psu-light2.png" width="95" height="44"></th>
+<td height="50" style="background-color:white;opacity:0.5;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/PSU_casestudy1.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://rmt.buildsci.us/comprehensive2/energy-use_example.php'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
+<td style="background-color:white;opacity:0.5;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/PSU_casestudy2.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a> <a href='http://rmt.buildsci.us/comprehensive2/energy-use_example.php'><img src='img/glyphicons_041_charts.png' width='25' height='25'></a></td>
+<td style="background-color:white;opacity:0.5;"><a href='http://developer.buildsci.us/archives/casestudies/pdfs/PSU_casestudy3.pdf'><img src='img/glyphicons_036_file.png' width='25' height='25'></a></td>
 <td><a class="svg" href="/comprehensive">
         <img src="img/comprehensive-house.svg" alt="lite simulation" width="25" height="25" />
     </a>
@@ -165,7 +165,7 @@
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             
-              ga('create', 'UA-26348074-7', 'eebhub.org');
+              ga('create', 'UA-26348074-7', 'buildsci.us');
               ga('send', 'pageview');
             
             </script>
