--- a/views/comprehensive.ejs
+++ b/views/comprehensive.ejs
@@ -260,7 +260,7 @@
                                             <option value="CAN_BC_Vancouver.718920_CWEC">Vancouver, CAN</option>
                                         </select>
                                         <span class="add-on">
-                                            <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                            <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                         </span>
                                     </div>
                                 </div>
@@ -1609,7 +1609,7 @@
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             
-              ga('create', 'UA-26348074-7', 'eebhub.org');
+              ga('create', 'UA-26348074-7', 'buildsci.us');
               ga('send', 'pageview');
             
             </script>
