--- a/views/comprehensive.html
+++ b/views/comprehensive.html
@@ -162,14 +162,14 @@
                          <li><hr style="color:lightgray;background-color:lightgray;height:1px;border:none;"/></li>
                          <li>
                         
-                             <a class="nohover" href="http://rmt.eebhub.org/tools.eebhub.org/energy-use.php" target="_blank"><i class="icon-signal"></i>  <b>Example Outputs</b></a>
+                             <a class="nohover" href="http://rmt.buildsci.us/tools.buildsci.us/energy-use.php" target="_blank"><i class="icon-signal"></i>  <b>Example Outputs</b></a>
                          </li>
                     </ul>
                 </div>
                 
                 <!-- ################################### Building Section ################################################## -->
                 <div class="span9">
-                    <form name="platformForm" id="comprehensive-form" action="http://rmt.eebhub.org/openstudio/eeb_rb/simulate-openstudio.php" method="post" onsubmit="return valForm('comprehensive-form');">
+                    <form name="platformForm" id="comprehensive-form" action="http://rmt.buildsci.us/openstudio/eeb_rb/simulate-openstudio.php" method="post" onsubmit="return valForm('comprehensive-form');">
                     <section id="building">
                         <div class="box-unit building">
                             <div class="page-header">
@@ -218,7 +218,7 @@
                                             <option value="CAN_BC_Vancouver.718920_CWEC">Vancouver, CAN</option>
                                         </select>
                                         <span class="add-on">
-                                            <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                            <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                         </span>
                                     </div>
                                 </div>
@@ -1548,7 +1548,7 @@
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             
-              ga('create', 'UA-26348074-7', 'eebhub.org');
+              ga('create', 'UA-26348074-7', 'buildsci.us');
               ga('send', 'pageview');
             
             </script>
