--- a/views/liteconversion.html
+++ b/views/liteconversion.html
@@ -441,7 +441,7 @@
                                                 <option>Vancouver, CAN</option>
                                             </select>
                                             <span class="add-on">
-                                                <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                                <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                             </span>
                                         </div>
                                     </div>
