--- a/views/partial.ejs
+++ b/views/partial.ejs
@@ -151,7 +151,7 @@
                         <li><hr style="color:lightgray;background-color:lightgray;height:1px;border:none;"/></li>
                          <li style="padding-bottom:15px;">
                         
-                             <a class="nohover" href="http://developer.eebhub.org/mit/designadvisor/" target="_blank"><i class="icon-signal"></i>  <b>Example Outputs</b></a>
+                             <a class="nohover" href="http://developer.buildsci.us/mit/designadvisor/" target="_blank"><i class="icon-signal"></i>  <b>Example Outputs</b></a>
                          </li>
                     </ul>
                 </div>
@@ -209,7 +209,7 @@
                                                 <option value="CAN_BC_Vancouver.718920_CWEC">Vancouver, CAN</option>
                                             </select>
                                             <span class="add-on">
-                                                <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                                <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                             </span>
                                         </div>
                                     </div>
@@ -554,7 +554,7 @@
                                 <h2 class="text-right"><small>developed by MIT Building Technology Lab</small></h2>
                         </div>
                          <div class="box-unit">
-                                <a class="btn btn-large gray" href="http://developer.eebhub.org/cmu/" target="_blank"> HVAC Module </a>
+                                <a class="btn btn-large gray" href="http://developer.buildsci.us/cmu/" target="_blank"> HVAC Module </a>
                                 <a class="btn btn-large gray" href="http://128.2.109.83:8888/ProductData/Acquisition.html" target="_blank"> Manufacturer Materials </a>
                                 <a class="btn btn-large gray" href="http://128.2.109.83:8888/WBEPATool/NYParametric.html?sessionfix" target="_blank"> Material Parametrics </a>
                                 <a target='_blank' href="http://www.cmu.edu/architecture/">
@@ -581,7 +581,7 @@
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             
-              ga('create', 'UA-26348074-7', 'eebhub.org');
+              ga('create', 'UA-26348074-7', 'buildsci.us');
               ga('send', 'pageview');
             
             </script>
