--- a/views/partial.html
+++ b/views/partial.html
@@ -159,7 +159,7 @@
                                                 <option value="CAN_BC_Vancouver.718920_CWEC">Vancouver, CAN</option>
                                             </select>
                                             <span class="add-on">
-                                                <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                                <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                             </span>
                                         </div>
                                     </div>
@@ -481,14 +481,14 @@
                         </section>
                         <div class="box-unit">
                             <input type="submit" class="btn btn-large btn-primary" value="SIMULATE"/>
-                            <a class="btn btn-large btn-info" href="http://developer.eebhub.org/mit/designadvisor/"><i class="icon-signal"></i> Example Outputs</a>
+                            <a class="btn btn-large btn-info" href="http://developer.buildsci.us/mit/designadvisor/"><i class="icon-signal"></i> Example Outputs</a>
                             <img style="text-align:right;float:right;" src="img/mit.png" alt="MIT" width="80" height="41">
                             <h2 class="text-right">
                                 <small>powered by MIT Design Advisor Engine</small>
                             </h2>
                         </div>
                         <div class="box-unit">
-                                <a class="btn btn-large btn-warning" href="http://developer.eebhub.org/utrc/uncertainty/riskanalysis.html"><i class="icon-exclamation-sign"></i> Risk Analysis </a>
+                                <a class="btn btn-large btn-warning" href="http://developer.buildsci.us/utrc/uncertainty/riskanalysis.html"><i class="icon-exclamation-sign"></i> Risk Analysis </a>
                                 <img style="text-align:right;float:right;" src="img/utrc.png" alt="UTRC" width="120" height="42">
                                 <br>
                                 <h2 class="text-right"><small>powered by UTRC Uncertainty Quantification</small></h2>
@@ -510,7 +510,7 @@
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             
-              ga('create', 'UA-26348074-7', 'eebhub.org');
+              ga('create', 'UA-26348074-7', 'buildsci.us');
               ga('send', 'pageview');
             
             </script>
