--- a/views/partial_auth.ejs
+++ b/views/partial_auth.ejs
@@ -188,7 +188,7 @@
                                                 <option>Vancouver, CAN</option>
                                             </select>
                                             <span class="add-on">
-                                                <a href="http://developer.eebhub.org/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
+                                                <a href="http://developer.buildsci.us/weather.html" target="_blank"><i class="icon-map-marker"></i></a>
                                             </span>
                                         </div>
                                     </div>
@@ -518,7 +518,7 @@
                             </h2>
                         </div>
                         <div class="box-unit">
-                                <a class="btn btn-large btn-warning" href="http://developer.eebhub.org/utrc/uncertainty/riskanalysis.html"><i class="icon-exclamation-sign"></i> Risk Analysis </a>
+                                <a class="btn btn-large btn-warning" href="http://developer.buildsci.us/utrc/uncertainty/riskanalysis.html"><i class="icon-exclamation-sign"></i> Risk Analysis </a>
                                 <img style="text-align:right;float:right;" src="img/utrc.png" alt="UTRC" width="120" height="42">
                                 <br>
                                 <h2 class="text-right"><small>powered by UTRC Uncertainty Quantification</small></h2>
@@ -540,7 +540,7 @@
               m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
               })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
             
-              ga('create', 'UA-26348074-7', 'eebhub.org');
+              ga('create', 'UA-26348074-7', 'buildsci.us');
               ga('send', 'pageview');
             
             </script>
