--- a/views/visitors.html
+++ b/views/visitors.html
@@ -4,7 +4,7 @@
     <head>
         <title>EEB Hub Simulation Platform Visitors</title>
         <!--<meta http-equiv="refresh"
-        content="0; url=http://tools.eebhub.org/lite"> -->
+        content="0; url=http://tools.buildsci.us/lite"> -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Bootstrap -->
         <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -53,7 +53,7 @@
           (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
           m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
           })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-          ga('create', 'UA-26348074-7', 'eebhub.org');
+          ga('create', 'UA-26348074-7', 'buildsci.us');
           ga('send', 'pageview');
         
         </script>
